<resources>
    <string name="app_name">Baro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="kakao_native_app_key">976fdc7be50eb5d783d2f938f3861167</string>
    <string name="kakao_scheme">kakao976fdc7be50eb5d783d2f938f3861167</string>

    <!--- new_info.xml -->
    <string name="welcome">바로에 오신 걸 환영합니다.\n다음 정보를 입력하면 더 정확한\n운동을 추천 받을 수 있어요.</string>
    <string name="nickname">별명</string>
    <string name="date_of_birth">생년월일</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="height">키</string>
    <string name="cm">cm</string>
    <string name="weight">체중</string>
    <string name="kg">kg</string>
    <string name="bone">골격근량(선택)</string>
    <string name="fitness_level">나의 운동 실력</string>
    <string name="high">상</string>
    <string name="mid">중</string>
    <string name="low">하</string>
    <string name="fav_exercise">좋아하는 운동 선택하기</string>
    <string name="choose">선택하기</string>
    <string name="join">바로 참여하기</string>

    <!-- fragment_home.xml -->
    <string name="myprofile">내 프로필</string>
    <string name="F5">새로고침</string>
    <string name="make_new">파티 만들기</string>
    <string name="sport_type_">운동 종목:</string>
    <string name="tmp_party_name">6시에 축구할 사람 구함</string>
    <string name="date">날짜:</string>
    <string name="time">시간:</string>
    <string name="member_count">현재인원 / 전체 인원:</string>
    <string name="join_group">참여하기</string>

    <!-- party info.xml -->
    <string name="sport_type">운동 종목</string>
    <string name="member">참여하는 사람 목록</string>
    <string name="place">장소</string>

</resources>