<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/bg_party_soon"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tmp_party_name"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/sport_type_"
        android:textColor="@color/blue"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/party_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/time"
        android:textColor="@color/blue"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/party_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/member_count"
        android:textColor="@color/blue"
        android:textSize="17sp" />

</LinearLayout>
