<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="38dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="25dp">

        <!-- 단일 자식으로 세로 배치 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 타이틀 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <!-- 닉네임 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/nickname"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:inputType="text"
                android:paddingEnd="10dp" />

            <!-- 생년월일 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/date_of_birth"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <EditText
                    android:id="@+id/birth_year"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="10dp"
                    android:text="@string/year"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/birth_month"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="10dp"
                    android:text="@string/month"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/birth_day"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/day"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- 성별 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </RadioGroup>

            <!-- 키 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/height"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/cm"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 몸무게 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/kg"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 골격근량(bench id 유지) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/bone"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/muscle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/kg"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 운동 실력 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/fitness_level"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rgLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rbLevelHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/high"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/rbLevelMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/mid"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/rbLevelLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </RadioGroup>

            <!-- 선호 운동 선택 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/fav_exercise"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rowSelect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/tvFavoriteSports"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/choose"
                    android:textColor="#9E9E9E"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivChevron"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivChevron"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 완료 버튼 -->
            <TextView
                android:id="@+id/btnComplete"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_primary"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/join"
                android:textColor="@drawable/bg_button_primary_text"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</android.widget.LinearLayout>
