<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="취소"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="저장"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/line_seperator" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/nickname"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:inputType="text"
                android:paddingEnd="10dp" />


            <!-- 키 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/height"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/cm"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 몸무게 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/kg"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 골격근량 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="골격근량"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etMuscle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:gravity="end|center_vertical"
                android:hint="@string/kg"
                android:inputType="number"
                android:paddingEnd="10dp" />

            <!-- 운동 실력 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/fitness_level"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rgLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rbLevelHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/high"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/rbLevelMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/mid"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/rbLevelLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </RadioGroup>

            <!-- 선호 운동 선택 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/fav_exercise"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rowSelect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edittext"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/choose"
                    android:textColor="#9E9E9E"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ivChevron"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivChevron"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</android.widget.LinearLayout>