<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="38dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings"
            app:layout_constraintBottom_toBottomOf="@id/settings" />

        <TextView
            android:id="@+id/myprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myprofile"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintRight_toLeftOf="@+id/settings"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/settings"
            app:layout_constraintBottom_toBottomOf="@id/settings" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F5"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="@drawable/bg_party_join"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginRight="7dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/create_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_new"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="@drawable/bg_party_join"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textAlignment="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1" />

</android.widget.LinearLayout>